command line args related improvements