@@ -15,7 +15,9 @@ plugins {
 apply plugin: 'org.checkerframework'
 
 wrapper {
-	gradleVersion = '8.14.3'
+	gradleVersion = '8.10.2'
+	//gradleVersion = '8.14.3'
+	//gradleVersion = '9.1.0'
 }
 
 final def javaLangVersion = JavaLanguageVersion.of(23)
@@ -237,11 +239,7 @@ application {
 		throw new StopExecutionException("Can't get JavaFX major version.")
 	}
 	final int javaLangVer = javaLangVersion.asInt()
-	
-	if (javafxVer == 24 && javaLangVer >= 24) {
-		applicationDefaultJvmArgs += '--enable-native-access=javafx.graphics'
-		applicationDefaultJvmArgs += '--sun-misc-unsafe-memory-access=allow'
-	}
+
 	if (javafxVer == 25) {
 		if (javaLangVer >= 24) {
 			applicationDefaultJvmArgs += '--enable-native-access=javafx.graphics'
